# SEBA

./: .gitignore  AtmosphericEnergyBudget.py  LICENSE.md  MANIFEST.in  README.md  constants.py  environment.yml  io_tools.py  kinematics.py  meson.build  meson.options  process_models.py  pyproject.toml  regression_models.py  seba.py  setup.py  shtns_backend.py  spectral_analysis.py  spherical_harmonics.py  test_dyamond.py  test_energy_budget.py  test_helmholtz.py  test_spectrum.py  thermodynamics.py  tools.py  visualization.py  wave_diagnostics.py
fortran_libs/: numeric_tools.f90  numeric_utils.f90
models/: wave_diagnostics.py
scripts/: check_dyamond.py  check_modes.py  check_reanalysis.py  compare_dyamond.py  compare_modes.py  compare_reanalysis.py  compare_spectrum.py  compute_IGW_fluctuations.py  manuscript_figures.py  process_models.py  process_modes.py  test_dyamond.py  test_energy_budget.py  test_helmholtz.py  test_ifs_spectra.py  test_modes.py  test_reanalysis.py  test_spectrum.py  wave_meanflow_interaction.py  wave_vortex_interaction.py
seba/: io_tools.py  seba.py  spectral_analysis.py  spherical_harmonics.py  thermodynamics.py  tools.py  visualization.py
src/: constants.py  io_tools.py  seba.py  spectral_analysis.py  spherical_harmonics.py  thermodynamics.py  tools.py  visualization.py
src/seba/: inter_scale_transfers.py  io_tools.py  kinematics.py  seba.py  spectral_analysis.py  spherical_harmonics.py  thermodynamics.py  tools.py  visualization.py
src/seba.egg-info/: PKG-INFO
src/seba/cm_data/: bcw.cm  cet_d02.cm  cet_d10.cm  cet_d13.cm
src/seba/fortran_libs/: numeric_tools.f90  numeric_tools.f90.old
tests/: test_dyamond.py  test_energy_budget.py  test_helmholtz.py  test_ifs_spectra.py  test_modes.py  test_spectrum.py
